<resources>
    <string name="app_name">Weather</string>

    <string name="start_message">Try to find your city.</string>

    <string name="error_city_name">Enter existing city name.</string>
    <string name="error_network">Check your network connection.</string>
    <string name="error">Something went wrong…</string>

    <string name="weather_image">Weather condition</string>
    <string name="temp_image">Temperature</string>
    <string name="celsius_image">Celsius</string>

    <string name="wind">Wind:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="details">Details:</string>
    <string name="current_date">Current weather</string>

    <string name="current_temp">%1$.0f°C</string>
    <string name="current_pressure">%1$.0f hPa</string>
    <string name="current_wind">%1$.1f m/s</string>
    <string name="current_humidity">%1$d %%</string>

    <string name="wind_sample">3.0 m/s</string>
    <string name="pressure_sample">1020 hPa</string>
    <string name="temp_sample">1.0</string>
    <string name="humidity_sample">87%</string>
    <string name="description_sample">Light Rain</string>
</resources>
