<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_height="match_parent"
android:layout_width="match_parent"
android:orientation="vertical">

<android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?colorPrimary"
    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    android:elevation="4dp"/>


<TextView
    android:id="@+id/messageTextView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="@dimen/title_size"
    android:textColor="@color/text_color_primary"
    android:gravity="center"
    android:layout_marginTop="20dp"
    tools:text="@string/error_city_name"/>


<android.support.constraint.ConstraintLayout
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/current_date"
        android:textColor="@color/text_color_primary"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/weatherImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/weather_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView"
        app:srcCompat="@drawable/ic_sun"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="40dp"
        android:textSize="@dimen/title_size"
        android:textColor="@color/text_color_primary"
        app:layout_constraintStart_toEndOf="@+id/weatherImageView"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView"
        tools:text="@string/description_sample"/>

    <ImageView
        android:id="@+id/tempImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/temp_image"
        app:layout_constraintStart_toEndOf="@+id/weatherImageView"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
        app:srcCompat="@drawable/ic_temperature"/>

    <TextView
        android:id="@+id/tempTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="@dimen/temperature_size"
        android:textColor="@color/text_color_primary"
        app:layout_constraintStart_toEndOf="@+id/tempImageView"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
        tools:text="@string/temp_sample"/>

    <TextView
        android:id="@+id/detailsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/details"
        android:textSize="@dimen/title_size"
        android:textColor="@color/text_color_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherImageView"/>

    <TextView
        android:id="@+id/pressureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/pressure"
        android:textSize="@dimen/description_text_size"
        android:textColor="@color/text_color_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsLabel"/>

    <TextView
        android:id="@+id/humidityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/humidity"
        android:textSize="@dimen/description_text_size"
        android:textColor="@color/text_color_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressureLabel"/>


    <TextView
        android:id="@+id/windLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/wind"
        android:textSize="@dimen/description_text_size"
        android:textColor="@color/text_color_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidityLabel"/>

    <TextView
        android:id="@+id/pressureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/description_text_size"
        android:textColor="@color/text_color_primary"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/pressureLabel"
        app:layout_constraintTop_toBottomOf="@+id/detailsLabel"
        tools:text="@string/pressure_sample"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/humidityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/description_text_size"
        android:textColor="@color/text_color_primary"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/humidityLabel"
        app:layout_constraintTop_toBottomOf="@+id/pressureTextView"
        tools:text="@string/humidity_sample"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/windTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/description_text_size"
        android:textColor="@color/text_color_primary"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/windLabel"
        app:layout_constraintTop_toBottomOf="@+id/humidityTextView"
        tools:text="@string/wind_sample"
        android:layout_marginLeft="44dp"/>


</android.support.constraint.ConstraintLayout>
</LinearLayout>
